Bug 403260. Set active state on current ARIA item in a container. r=surkov, a=beltzner